# warehouse-monitoring-service

./: .gitignore  Dockerfile  TECHNICAL_REPORT.md  docker-compose.yml  env_template.env  pyproject.toml
app/: logging_config.py  main.py
app/api/: movement.py  routes.py  warehouse.py
app/core/: config.py
app/db/: create_tables.py  database.py
app/kafka/: consumer.py  producer.py  utils.py
app/models/: enums.py  movement.py  warehouse_state.py
app/schemas/: movement.py  warehouse.py
app/services/: exceptions.py  movement.py  warehouse.py
