[tool.poetry]
name = "warehouse-monitoring-service"
version = "0.1.0"
description = "Microservice for monitoring warehouse operations using FastAPI and Kafka"
authors = ["Олег <oleg.ablov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
aiokafka = "^0.12.0"
pydantic = "^2.11.7"
python-dotenv = "^1.1.1"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
